# pon-shop

./: .gitignore  .user_service.env  README.md  bash.sh  down.sh  up.sh  up_build.sh
docs/: Scheme.plantuml
review_service/: go.mod  main.go
scripts/: create_kafka_topic.sh  down_volumes.sh  kafka_create_topics.sh  kafka_show_order_service_log.sh  kafka_show_product_service_log.sh  kafka_show_review_service_log.sh  kafka_show_topic_list.sh  kafka_show_user_service_log.sh  up_build.sh
services/user_service/: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
services/user_service/app/: config.py  database.py  main.py
services/user_service/app/alembic/: env.py
services/user_service/app/alembic/versions/: 20250601_add_user_review_count.py
services/user_service/app/api/: dependencies.py
services/user_service/app/api/v1/endpoints/: dependencies.py  user.py
services/user_service/app/application/services/: user_service.py
services/user_service/app/db/: db.py
services/user_service/app/domain/models/: user.py
services/user_service/app/infrastructure/: kafka_logger.py
services/user_service/app/infrastructure/database/: session.py
services/user_service/app/infrastructure/database/models/: user.py
services/user_service/app/infrastructure/database/repositories/: user_repository_impl.py
services/user_service/app/models/: user.py
services/user_service/app/repositories/: base.py  user.py
services/user_service/app/schemas/: user.py
services/user_service/app/services/: user.py
services/user_service/entrypoint/: start.sh
(+71 files in other folders)
