[project]
name = "user-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard,standart]>=0.115.12",
    "psycopg>=3.2.6",
    "psycopg-binary>=3.2.6",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.4",
]

[tool.ruff]
select = [
  "E", "W", "F",
  "B", "C", "N",
  "UP",
  "I",
]
